# fast-coref

./: pyproject.toml
fast_coref/data_processing/: utils.py
fast_coref/inference/: model_inference.py  tokenize_doc.py
fast_coref/model/: entity_ranking_model.py  utils.py
fast_coref/model/document_encoder/: __init__.py  independent.py
fast_coref/model/memory/: __init__.py  base_memory.py  entity_memory.py  entity_memory_bounded.py
fast_coref/model/mention_proposal/: __init__.py  mention_proposal_module.py
