[project]
name = "fast-coref"
version = "0.1.0"
description = "Code for the CRAC 2021 paper \"On Generalization in Coreference Resolution\" (Best short paper award) "
authors = [{name="Shubham Toshniwal"}]
dependencies = [
  'torch>=1.10.0,<1.13.0',
  'transformers==4.11.3',
  'scipy==1.6.3',
  'omegaconf==2.1.1',
  'hydra-core==1.1.1',
  'wandb==0.12.6',
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>= 48",
    "setuptools_scm[toml] >4",
    "wheel >= 0.29.0"
]

[tool.setuptools]
packages = ["fast_coref"]

[project.urls]
repository = "https://github.com/shtoshni/fast-coref"

